# detective

./: ABBScores.cpp  ABBScores.h  CMakeLists.txt  City.cpp  City.h  ColaTestigos.cpp  ColaTestigos.h  Game.cpp  Game.h  HashSospecha.cpp  HashSospecha.h  Hint.cpp  Hint.h  HintStack.cpp  HintStack.h  Location.cpp  Location.h  Open Notebook.onetoc2  README.md  Sospechoso.cpp  Sospechoso.h  Testigo.cpp  Testigo.h  User.cpp  User.h  main.cpp
.github/workflows/: c-cpp.yml
